# facter-repr

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Requirements.txt  compose.yaml  conda-lock.yml  environment.yml  experiment-commands.md  main.py  mlflow.db  pyproject.toml  results_analysis.ipynb  results_analysis_updated.ipynb
docs/: prompts_sushi_dropin.md
emissions/: emissions_20260126_120054.csv  emissions_20260126_165645.csv  emissions_20260126_211533.csv  emissions_20260126_214140.csv  emissions_20260126_214602.csv  emissions_20260126_221050.csv  emissions_20260126_233548.csv  emissions_20260127_000145.csv  emissions_20260127_001910.csv  emissions_20260127_095058.csv  emissions_20260127_095059.csv  emissions_20260127_095213.csv  emissions_20260127_095257.csv  emissions_20260127_095351.csv  emissions_20260127_100947.csv  emissions_20260127_101125.csv  emissions_20260127_102725.csv  emissions_20260127_170711.csv  emissions_20260127_182113.csv  emissions_20260127_182233.csv  emissions_20260127_183118.csv  emissions_20260127_183124.csv  emissions_20260127_183214.csv  emissions_20260127_184128.csv  emissions_20260127_184454.csv  emissions_20260127_190224.csv  emissions_20260128_131821.csv  emissions_20260128_134350.csv  emissions_20260128_162634.csv
facter/: __init__.py  baseline_zero_shot.py  catalog_map.py  config.py  data.py  fairness.py  metrics_fairness.py  models.py  prompt_engine.py  utils.py
mlflow_analysis_output/: agg_3row_all.csv  agg_3row_meta-llama-Llama-2-7b-chat-hf_ml-1m_open.csv  agg_3row_meta-llama-Llama-2-7b-chat-hf_ml-1m_rank.csv  (+7 more)
(+61 files in other folders)
